# A0580_V3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_demo_gradio.py  settings.json  setup.py
app/backend/: settings.json
app/backend/DocuSearchAgency/: __init__.py  agency.py  agency_manifesto.md
app/backend/DocuSearchAgency/AdvancedRAGAgent/: __init__.py  advanced_rag_agent.py  instructions_advanced_rag_agent.md
app/backend/DocuSearchAgency/AdvancedRAGAgent/tools/: KBSelectorTool.py  SemanticSearchExecutor.py  __init__.py
app/backend/DocuSearchAgency/AdvancedRAGAgent/tools/utils/: __init__.py  kb_filter_builder.py  query_kb_mapper.py
app/backend/DocuSearchAgency/DocuSearchCEO/: DocuSearchCEO.py  __init__.py  instructions_CEO.md
app/backend/DocuSearchAgency/KnowledgeBaseSelector/: KnowledgeBaseSelector.py  __init__.py  instructions_kb_selector.md
app/backend/DocuSearchAgency/KnowledgeBaseSelector/tools/: KBSelectorTool.py  __init__.py
app/backend/DocuSearchAgency/KnowledgeBaseSelector/tools/utils/: __init__.py  kb_manager.py  types.py
app/backend/DocuSearchAgency/SemanticSearchAgent/: SemanticSearchAgent.py  instructions_semantic_search.md
app/backend/DocuSearchAgency/SemanticSearchAgent/tools/: __init__.py
app/backend/DocuSearchAgency/SemanticSearchAgent/tools/utils/: __init__.py  types.py
app/tests/: conftest.py
app/tests/unit/: test_agency_manager.py
app/tests/unit/knowledge_base_selector/: test_kb_selector_tool.py  test_query_kb_mapper.py
data/knowledge_bases/chromadb/vector_storage/: chroma.sqlite3
