[tool.poetry]
name = "docusearch-agency"
version = "0.1.0"
description = "DocuSearch Agency for document analysis"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
agency-swarm = ">=0.4.0,<0.5.0"
dsrag = ">=0.4.3,<0.5.0"
pytest = ">=8.3.4,<9.0.0"
pytest-cov = ">=6.0.0,<7.0.0"
pytest-mock = ">=3.14.0,<4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]